--- a/index.html
+++ b/index.html
@@ -21,30 +21,32 @@
   <body>
     <header class="cabecalho">
       <div class="container">
-        <input type="checkbox" class="container__botao" id="menu" />
-        <label for="menu">
-          <span class="cabecalho__menu-hamburguer container__imagem"></span>
-        </label>
-        <ul class="lista-menu">
-          <li class="lista-menu__titulo">
-            <a href="#" class="lista-menu__link__titulo">categorias</a>
-          </li>
-          <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">programação</a>
-          </li>
-          <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">front-end</a>
-          </li>
-          <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">infraestrutura</a>
-          </li>
-          <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">business</a>
-          </li>
-          <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">design & ux</a>
-          </li>
-        </ul>
+        <nav>
+          <input type="checkbox" class="container__botao" id="menu" />
+          <label for="menu">
+            <span class="cabecalho__menu-hamburguer container__imagem"></span>
+          </label>
+          <ul class="lista-menu">
+            <li class="lista-menu__titulo">
+              <a href="#" class="lista-menu__link__titulo">categorias</a>
+            </li>
+            <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">programação</a>
+            </li>
+            <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">front-end</a>
+            </li>
+            <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">infraestrutura</a>
+            </li>
+            <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">business</a>
+            </li>
+            <li class="lista-menu__item">
+              <a href="#" class="lista-menu__link">design & ux</a>
+            </li>
+          </ul>
+        </nav>
         <img
           src="./img/Logo.svg"
           alt="Logo da Alurabooks"
@@ -72,72 +74,244 @@
         /></a>
       </div>
     </header>
-    <section class="banner">
-      <h2 class="banner__titulo">Já sabe por onde começar?</h2>
-      <p class="banner__texto">
-        Encontre em nossa estante o que precisa para seu desenvolvimento!
-      </p>
-      <input
-        type="search"
-        name="pesqueisa"
-        placeholder="Qual será a próxima leitura?"
-        class="banner_pesquisa"
-      />
-    </section>
-    <section class="carrossel">
-      <h2 class="carrossel__titulo">últimos lançamentos</h2>
-      <!-- Slider main container -->
-      <div class="swiper">
-        <!-- Additional required wrapper -->
-
-        <!-- If we need pagination -->
-        <div class="swiper-pagination"></div>
-
-        <div class="swiper-wrapper">
-          <!-- Slides -->
-          <div class="swiper-slide">
+    <main>
+      <section class="banner">
+        <h2 class="banner__titulo">Já sabe por onde começar?</h2>
+        <p class="banner__texto">
+          Encontre em nossa estante o que precisa para seu desenvolvimento!
+        </p>
+        <input
+          type="search"
+          name="pesqueisa"
+          placeholder="Qual será a próxima leitura?"
+          class="banner_pesquisa"
+        />
+      </section>
+      <section class="carrossel">
+        <h2 class="carrossel__titulo">últimos lançamentos</h2>
+        <div class="swiper">
+          <div class="swiper-pagination"></div>
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img
+                src="./img/Javascript.svg"
+                alt="Livro sobre Javascript assertivo da alurabooks"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="./img/Angular.svg"
+                alt="Livro sobre Angular 11 e Firebase da alurabooks"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="./img/Liderança.svg"
+                alt="Livro sobre Liderança e design da alurabooks"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="./img/Guia Front-end.svg"
+                alt="Livro Guia Front-end da alurabooks"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="./img/Portugol.svg"
+                alt="Livro sobre Portugol da alurabooks"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="./img/Acessibilidade.svg"
+                alt="Livro sobre acessibilidade web da alurabooks"
+              />
+            </div>
+          </div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
+        <div class="card">
+          <!-- Primeira Linha -->
+          <div class="card__descricao">
+            <!-- Primeira Coluna -->
+            <div class="descricao">
+              <h3 class="descricao__titulo">
+                Talvez você também se interesse por...
+              </h3>
+              <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+              <p class="descricao__texto">
+                Construindo uma aplicação integrada com a plataforma do Google.
+              </p>
+            </div>
+            <!-- Segunda Coluna -->
             <img
-              src="./img/Javascript.svg"
-              alt="Livro sobre Javascript assertivo da alurabooks"
+              src="/img/Angular-card.svg"
+              class="descricao__imagem"
+              alt="Logo do Angular"
             />
           </div>
-          <div class="swiper-slide">
-            <img
-              src="./img/ApacheKafka.svg"
-              alt="Livro sobre kafka e spring boot da alurabooks"
-            />
-          </div>
-          <div class="swiper-slide">
-            <img
-              src="./img/Liderança.svg"
-              alt="Livro sobre Liderança e design da alurabooks"
-            />
-          </div>
-          <div class="swiper-slide">
-            <img
-              src="./img/Guia Front-end.svg"
-              alt="Livro Guia Front-end da alurabooks"
-            />
-          </div>
-          <div class="swiper-slide">
-            <img
-              src="./img/Portugol.svg"
-              alt="Livro sobre Portugol da alurabooks"
-            />
-          </div>
-          <div class="swiper-slide">
-            <img
-              src="./img/Acessibilidade.svg"
-              alt="Livro sobre acessibilidade web da alurabooks"
-            />
+          <!-- Segunda Linha -->
+          <div class="card__botoes">
+            <!-- Primeira Coluna -->
+            <ul class="botoes">
+              <li class="botoes__item">
+                <img src="/img/Favoritos.svg" alt="Favoritar Item" />
+              </li>
+              <li class="botoes__item">
+                <img
+                  src="/img/Compras.svg"
+                  alt="Adicionar no Carrinho de Compras"
+                />
+              </li>
+            </ul>
+            <a href="#" class="botoes__link">Saiba Mais</a>
           </div>
         </div>
+      </section>
+      <section class="carrossel">
+        <h2 class="carrossel__titulo">últimos lançamentos</h2>
+        <div class="swiper">
+          <div class="swiper-pagination"></div>
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img
+                src="./img/Tuning.svg"
+                alt="Livro sobre Tuning de SQL da alurabooks"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="./img/ApacheKafka.svg"
+                alt="Livro sobre kafka e spring boot da alurabooks"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="./img/Arquitetura.svg"
+                alt="Livro sobre Arquitetura de Software Distribuído da alurabooks"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="./img/Gestão2.svg"
+                alt="Livro Gestão de Produtos da alurabooks"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img src="./img/MEAN.svg" alt="Livro sobre MEAN da alurabooks" />
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="./img/MetricasAgeis.svg"
+                alt="Livro sobre Métricas Ágeis da alurabooks"
+              />
+            </div>
+          </div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
+        <div class="card">
+          <!-- Primeira Linha -->
+          <div class="card__descricao">
+            <!-- Primeira Coluna -->
+            <div class="descricao">
+              <ul class="voto">
+                <li class="voto__decoracao">
+                  <img src="./img/Star.svg" alt="Estrela de voto" />
+                </li>
+                <li class="voto__decoracao">
+                  <img src="./img/Star.svg" alt="Estrela de voto" />
+                </li>
+                <li class="voto__decoracao">
+                  <img src="./img/Star.svg" alt="Estrela de voto" />
+                </li>
+                <li class="voto__decoracao">
+                  <img src="./img/Star.svg" alt="Estrela de voto" />
+                </li>
+                <li class="voto__decoracao">
+                  <img src="./img/Star.svg" alt="Estrela de voto" />
+                </li>
+              </ul>
+              <h3 class="descricao__titulo">Autora do Mês</h3>
+              <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
+              <p class="descricao__texto">
+                Analista de sistemas e escritora, Juliana é especialista em
+                Front-End.
+              </p>
+            </div>
+            <!-- Segunda Coluna -->
+            <img
+              src="/img/Perfil-escritora.svg"
+              class="descricao__imagem"
+              alt="Logo do Angular"
+            />
+          </div>
+          <!-- Segunda Linha -->
+          <div class="card__botoes">
+            <!-- Primeira Coluna -->
+            <ul class="botoes">
+              <li class="botoes__item">
+                <img src="/img/Favoritos.svg" alt="Favoritar Item" />
+              </li>
+              <li class="botoes__item">
+                <img
+                  src="/img/Compras.svg"
+                  alt="Adicionar no Carrinho de Compras"
+                />
+              </li>
+            </ul>
+            <a href="#" class="botoes__link">Saiba Mais</a>
+          </div>
+        </div>
+      </section>
+      <section class="topicos">
+        <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+        <ul class="topicos__lista">
+          <li class="topicos__item">
+            <a href="#" class="topicos__link">Android</a>
+          </li>
+          <li class="topicos__item">
+            <a href="#" class="topicos__link">Marketing Digital</a>
+          </li>
+          <li class="topicos__item">
+            <a href="#" class="topicos__link">Agile</a>
+          </li>
+          <li class="topicos__item">
+            <a href="#" class="topicos__link">Startups</a>
+          </li>
+          <li class="topicos__item">
+            <a href="#" class="topicos__link">HTML & CSS</a>
+          </li>
+          <li class="topicos__item">
+            <a href="#" class="topicos__link">Python</a>
+          </li>
+          <li class="topicos__item">
+            <a href="#" class="topicos__link">OO</a>
+          </li>
+          <li class="topicos__item">
+            <a href="#" class="topicos__link">Java</a>
+          </li>
+        </ul>
+      </section>
+      <section class="contato">
+        <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+        <p class="contato__texto">
+          Atualizações de e-books, novos livros, promoções e outros.
+        </p>
+        <input
+          type="email"
+          class="contato__email"
+          placeholder="Cadastre seu e-mail"
+        />
+      </section>
 
-        <!-- If we need navigation buttons -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-      </div>
-    </section>
+      <hr />
+    </main>
+    <footer class="rodape">
+      <h2 class="rodape__titulo">Grupo Alura</h2>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="./scripts/swiper.js"></script>
   </body>
