Refatorando os códigos

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           class="banner_pesquisa"
         />
       </section>
-      <section class="carrossel">
+      <section>
         <h2 class="carrossel__titulo">últimos lançamentos</h2>
         <div class="swiper">
           <div class="swiper-pagination"></div>
@@ -136,7 +136,7 @@
           <!-- Primeira Linha -->
           <div class="card__descricao">
             <!-- Primeira Coluna -->
-            <div class="descricao">
+            <div>
               <h3 class="descricao__titulo">
                 Talvez você também se interesse por...
               </h3>
@@ -148,7 +148,6 @@
             <!-- Segunda Coluna -->
             <img
               src="/img/Angular-card.svg"
-              class="descricao__imagem"
               alt="Logo do Angular"
             />
           </div>
@@ -170,7 +169,7 @@
           </div>
         </div>
       </section>
-      <section class="carrossel">
+      <section>
         <h2 class="carrossel__titulo">últimos lançamentos</h2>
         <div class="swiper">
           <div class="swiper-pagination"></div>
@@ -216,7 +215,7 @@
           <!-- Primeira Linha -->
           <div class="card__descricao">
             <!-- Primeira Coluna -->
-            <div class="descricao">
+            <div>
               <ul class="voto">
                 <li class="voto__decoracao">
                   <img src="./img/Star.svg" alt="Estrela de voto" />
@@ -310,7 +309,7 @@
       <hr />
     </main>
     <footer class="rodape">
-      <h2 class="rodape__titulo">Grupo Alura</h2>
+      <h2>Grupo Alura</h2>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="./scripts/swiper.js"></script>
